--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,12 +1,12 @@
 timezone = 0
 
-voicechannel = 887343738823798795
-textchannel = 938567989182226533
-ladderchannel = 923076740337791036
+voicechannel = 
+textchannel = 
+ladderchannel = 
 jungsanchannel = 
-killchannel = 915953170742661141
-racingchannel = 923076740337791036
-itemchannel = 925620555254739037
+killchannel = 
+racingchannel = 
+itemchannel = 
 
 before_alert = 1
 before_alert1 = 5
