--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -2,420 +2,420 @@
 bossname = old drake
 bosstime = 19:15
 genPeriod = 24:00
-startDate = 2023-07-17
+startDate = 2023-07-22
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = Balrog
 bosstime = 23:00
 genPeriod = 24:00
-startDate = 2023-07-17
+startDate = 2023-07-22
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = fire dk
 bosstime = 23:30
 genPeriod = 24:00
-startDate = 2023-07-17
+startDate = 2023-07-22
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = daemon
 bosstime = 22:30
 genPeriod = 24:00
-startDate = 2023-07-17
+startDate = 2023-07-22
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 1F
 bosstime = 12:30
 genPeriod = 168:00
-startDate = 2023-07-17
+startDate = 2023-07-24
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 2F
 bosstime = 19:30
 genPeriod = 168:00
-startDate = 2023-07-17
+startDate = 2023-07-24
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 3F
 bosstime = 20:30
 genPeriod = 168:00
-startDate = 2023-07-17
+startDate = 2023-07-24
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 4F
 bosstime = 22:30
 genPeriod = 168:00
-startDate = 2023-07-17
+startDate = 2023-07-24
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 5F
 bosstime = 12:30
 genPeriod = 168:00
-startDate = 2023-07-17
+startDate = 2023-07-24
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 6F
 bosstime = 19:30
 genPeriod = 168:00
-startDate = 2023-07-17
+startDate = 2023-07-24
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 7F
 bosstime = 20:30
 genPeriod = 168:00
-startDate = 2023-07-17
+startDate = 2023-07-24
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 8F
 bosstime = 22:30
 genPeriod = 168:00
-startDate = 2023-07-17
+startDate = 2023-07-24
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 9F
 bosstime = 20:30
 genPeriod = 168:00
-startDate = 2023-07-17
+startDate = 2023-07-24
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = teveras/テーペ/底比斯
 bosstime = 21:30
 genPeriod = 168:00
-startDate = 2023-07-17
+startDate = 2023-07-24
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 10F
 bosstime = 22:30
 genPeriod = 168:00
-startDate = 2023-07-17
+startDate = 2023-07-24
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 1F
 bosstime = 12:30
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 2F
 bosstime = 19:30
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 3F
 bosstime = 20:30
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 4F
 bosstime = 22:30
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 5F
 bosstime = 12:30
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 6F
 bosstime = 19:30
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 7F
 bosstime = 20:30
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 8F
 bosstime = 22:30
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 9F
 bosstime = 20:30
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = Tikal/ティカル/神廟
 bosstime = 21:30
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 10F
 bosstime = 22:30
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 1F
 bosstime = 12:30
 genPeriod = 168:00
-startDate = 2023-07-19
+startDate = 2023-07-26
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 2F
 bosstime = 19:30
 genPeriod = 168:00
-startDate = 2023-07-19
+startDate = 2023-07-26
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 3F
 bosstime = 20:30
 genPeriod = 168:00
-startDate = 2023-07-19
+startDate = 2023-07-26
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 4F
 bosstime = 22:30
 genPeriod = 168:00
-startDate = 2023-07-19
+startDate = 2023-07-26
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 5F
 bosstime = 12:30
 genPeriod = 168:00
-startDate = 2023-07-19
+startDate = 2023-07-26
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 6F
 bosstime = 19:30
 genPeriod = 168:00
-startDate = 2023-07-19
+startDate = 2023-07-26
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 7F
 bosstime = 20:30
 genPeriod = 168:00
-startDate = 2023-07-19
+startDate = 2023-07-26
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 8F
 bosstime = 22:30
 genPeriod = 168:00
-startDate = 2023-07-19
+startDate = 2023-07-26
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 9F
 bosstime = 20:30
 genPeriod = 168:00
-startDate = 2023-07-19
+startDate = 2023-07-26
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 10F
 bosstime = 22:30
 genPeriod = 168:00
-startDate = 2023-07-19
+startDate = 2023-07-26
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 1F
 bosstime = 12:30
 genPeriod = 168:00
-startDate = 2023-07-20
+startDate = 2023-07-27
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 2F
 bosstime = 19:30
 genPeriod = 168:00
-startDate = 2023-07-20
+startDate = 2023-07-27
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 3F
 bosstime = 20:30
 genPeriod = 168:00
-startDate = 2023-07-20
+startDate = 2023-07-27
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 4F
 bosstime = 22:30
 genPeriod = 168:00
-startDate = 2023-07-20
+startDate = 2023-07-27
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 5F
 bosstime = 12:30
 genPeriod = 168:00
-startDate = 2023-07-20
+startDate = 2023-07-27
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 6F
 bosstime = 19:30
 genPeriod = 168:00
-startDate = 2023-07-20
+startDate = 2023-07-27
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 7F
 bosstime = 20:30
 genPeriod = 168:00
-startDate = 2023-07-20
+startDate = 2023-07-27
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 8F
 bosstime = 22:30
 genPeriod = 168:00
-startDate = 2023-07-20
+startDate = 2023-07-27
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 9F
 bosstime = 20:30
 genPeriod = 168:00
-startDate = 2023-07-20
+startDate = 2023-07-27
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 10F
 bosstime = 22:30
 genPeriod = 168:00
-startDate = 2023-07-20
+startDate = 2023-07-27
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 1F
 bosstime = 12:30
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 2F
 bosstime = 19:30
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 3F
 bosstime = 20:30
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 4F
 bosstime = 22:30
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 5F
 bosstime = 12:30
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 6F
 bosstime = 19:30
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 7F
 bosstime = 20:30
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 8F
 bosstime = 22:30
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 9F
 bosstime = 20:30
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = rastabad/ラスタパ/拉洞
 bosstime = 21:30
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = 10F
 bosstime = 22:30
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = Bapho
 bosstime = 14:00
 genPeriod = 24:00
-startDate = 2023-07-17
+startDate = 2023-07-22
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = Bapho
 bosstime = 20:00
 genPeriod = 24:00
-startDate = 2023-07-17
+startDate = 2023-07-22
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = Necro
 bosstime = 11:00
 genPeriod = 02:00
-startDate = 2023-07-17
+startDate = 2023-07-22
 before_alert_ment = !
 alert_ment =  time. Come on!
 
@@ -429,308 +429,308 @@ alert_ment =  time. Come on!
 bossname = GC 1F
 bosstime = 06:00
 genPeriod = 168:00
-startDate = 2023-07-17
+startDate = 2023-07-24
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 1F
 bosstime = 12:00
 genPeriod = 168:00
-startDate = 2023-07-17
+startDate = 2023-07-24
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 1F
 bosstime = 18:00
 genPeriod = 168:00
-startDate = 2023-07-17
+startDate = 2023-07-24
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 1F
 bosstime = 00:00
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 1F
 bosstime = 06:00
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 1F
 bosstime = 12:00
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 1F
 bosstime = 18:00
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 1F
 bosstime = 00:00
 genPeriod = 168:00
-startDate = 2023-07-19
+startDate = 2023-07-26
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 1F
 bosstime = 06:00
 genPeriod = 168:00
-startDate = 2023-07-19
+startDate = 2023-07-26
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 1F
 bosstime = 12:00
 genPeriod = 168:00
-startDate = 2023-07-19
+startDate = 2023-07-26
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 1F
 bosstime = 18:00
 genPeriod = 168:00
-startDate = 2023-07-19
+startDate = 2023-07-26
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 1F
 bosstime = 00:00
 genPeriod = 168:00
-startDate = 2023-07-20
+startDate = 2023-07-27
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 1F
 bosstime = 06:00
 genPeriod = 168:00
-startDate = 2023-07-20
+startDate = 2023-07-27
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 1F
 bosstime = 12:00
 genPeriod = 168:00
-startDate = 2023-07-20
+startDate = 2023-07-27
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 1F
 bosstime = 18:00
 genPeriod = 168:00
-startDate = 2023-07-20
+startDate = 2023-07-27
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 1F
 bosstime = 00:00
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 1F
 bosstime = 06:00
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 1F
 bosstime = 12:00
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 1F
 bosstime = 18:00
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 2F
 bosstime = 07:00
 genPeriod = 168:00
-startDate = 2023-07-17
+startDate = 2023-07-24
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 2F
 bosstime = 14:00
 genPeriod = 168:00
-startDate = 2023-07-17
+startDate = 2023-07-24
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 2F
 bosstime = 21:00
 genPeriod = 168:00
-startDate = 2023-07-17
+startDate = 2023-07-24
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 2F
 bosstime = 07:00
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 2F
 bosstime = 14:00
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 2F
 bosstime = 21:00
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 2F
 bosstime = 07:00
 genPeriod = 168:00
-startDate = 2023-07-19
+startDate = 2023-07-26
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 2F
 bosstime = 14:00
 genPeriod = 168:00
-startDate = 2023-07-19
+startDate = 2023-07-26
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 2F
 bosstime = 21:00
 genPeriod = 168:00
-startDate = 2023-07-19
+startDate = 2023-07-26
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 2F
 bosstime = 07:00
 genPeriod = 168:00
-startDate = 2023-07-20
+startDate = 2023-07-27
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 2F
 bosstime = 14:00
 genPeriod = 168:00
-startDate = 2023-07-20
+startDate = 2023-07-27
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 2F
 bosstime = 21:00
 genPeriod = 168:00
-startDate = 2023-07-20
+startDate = 2023-07-27
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 2F
 bosstime = 07:00
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 2F
 bosstime = 14:00
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 2F
 bosstime = 21:00
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 3F
 bosstime = 20:15
 genPeriod = 168:00
-startDate = 2023-07-17
+startDate = 2023-07-24
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 3F
 bosstime = 20:15
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 3F
 bosstime = 20:15
 genPeriod = 168:00
-startDate = 2023-07-19
+startDate = 2023-07-26
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 3F
 bosstime = 20:15
 genPeriod = 168:00
-startDate = 2023-07-20
+startDate = 2023-07-27
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 3F
 bosstime = 20:15
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 4F
 bosstime = 21:15
 genPeriod = 168:00
-startDate = 2023-07-17
+startDate = 2023-07-24
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 4F
 bosstime = 21:15
 genPeriod = 168:00
-startDate = 2023-07-18
+startDate = 2023-07-25
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 4F
 bosstime = 21:15
 genPeriod = 168:00
-startDate = 2023-07-19
+startDate = 2023-07-26
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 4F
 bosstime = 21:15
 genPeriod = 168:00
-startDate = 2023-07-20
+startDate = 2023-07-27
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 4F
 bosstime = 21:15
 genPeriod = 168:00
-startDate = 2023-07-21
+startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on!
 
@@ -809,4 +809,4 @@ bosstime = 21:00
 genPeriod = 168:00
 startDate = 2023-07-22
 before_alert_ment = !
-alert_ment =  time. Come on!
+alert_ment =  time. Come on
