--- a/boss.ini
+++ b/boss.ini
@@ -187,3 +187,17 @@ nogencheck = 1
 before_alert_ment = !
 alert_ment =  time. Come on!
 mungtime = 1
+
+bossname = 12, オルクス
+gentime = 06:00
+nogencheck = 1
+before_alert_ment = !
+alert_ment =  time. Come on!
+mungtime = 1
+
+bossname = 56, ネグロス
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = !
+alert_ment =  time. Come on!
+mungtime = 1
