--- a/boss.ini
+++ b/boss.ini
@@ -188,14 +188,14 @@ before_alert_ment = !
 alert_ment =  time. Come on!
 mungtime = 1
 
-bossname = 12, オルクス
+bossname = オルクス, 12
 gentime = 06:00
 nogencheck = 1
 before_alert_ment = !
 alert_ment =  time. Come on!
 mungtime = 1
 
-bossname = 56, ネグロス
+bossname = ネグロス, 56
 gentime = 04:00
 nogencheck = 1
 before_alert_ment = !
