--- a/boss.ini
+++ b/boss.ini
@@ -188,14 +188,14 @@ before_alert_ment = !
 alert_ment =  time. Come on!
 mungtime = 1
 
-bossname = オルクス, 12
+bossname = オルクス/12, オルクス, 12
 gentime = 06:00
 nogencheck = 1
 before_alert_ment = !
 alert_ment =  time. Come on!
 mungtime = 1
 
-bossname = ネグロス, 56
+bossname = ネグロス/56, ネグロス, 56
 gentime = 04:00
 nogencheck = 1
 before_alert_ment = !
