--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -810,3 +810,17 @@ genPeriod = 168:00
 startDate = 2023-07-22
 before_alert_ment = !
 alert_ment =  time. Come on
+
+bossname = DTD 4F デュラハン, デュラハン
+bosstime = 18:00
+genPeriod = 24:00
+startDate = 2023-07-22
+before_alert_ment = !
+alert_ment =  time. Come on
+
+bossname = DTD 4F ドラかリス, ドラかリス
+bosstime = 00:00
+genPeriod = 24:00
+startDate = 2023-07-22
+before_alert_ment = !
+alert_ment =  time. Come on
