--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -811,14 +811,14 @@ startDate = 2023-07-22
 before_alert_ment = !
 alert_ment =  time. Come on
 
-bossname = DTD 4F デュラハン, デュラハン
+bossname = DTD 4F デュラハン
 bosstime = 18:00
 genPeriod = 24:00
 startDate = 2023-07-22
 before_alert_ment = !
 alert_ment =  time. Come on
 
-bossname = DTD 4F ドラかリス, ドラかリス
+bossname = DTD 4F ドラかリス
 bosstime = 00:00
 genPeriod = 24:00
 startDate = 2023-07-22
