--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 0
 
 voicechannel = 
-textchannel = 1133711115289895045
+textchannel = 
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
