--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 0
 
 voicechannel = 
-textchannel = 
+textchannel = 938567989182226533
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
