--- a/boss.ini
+++ b/boss.ini
@@ -201,3 +201,24 @@ nogencheck = 1
 before_alert_ment = !
 alert_ment =  time. Come on!
 mungtime = 1
+
+bossname = キズス/鈴木/31, キズス, 鈴木, 31
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = !
+alert_ment =  time. Come on!
+mungtime = 1
+
+bossname = タバシ/柴田/55, タバシ, 柴田, 55
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = !
+alert_ment =  time. Come on!
+mungtime = 1
+
+bossname = チウコオオ/大河內/TI08, チウコオオ, 大河內, TI08
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = !
+alert_ment =  time. Come on!
+mungtime = 1
