--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -71,43 +71,316 @@ alert_ment =  time. Come on!
 
 bossname = GC 1F
 bosstime = 00:00
-genPeriod = 06:00
-startDate = 2023-07-31
+genPeriod = 168:00
+startDate = 2023-08-28
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 1F
+bosstime = 06:00
+genPeriod = 168:00
+startDate = 2023-08-28
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 1F
+bosstime = 12:00
+genPeriod = 168:00
+startDate = 2023-08-28
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 1F
+bosstime = 18:00
+genPeriod = 168:00
+startDate = 2023-08-28
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 1F
+bosstime = 00:00
+genPeriod = 168:00
+startDate = 2023-08-29
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 1F
+bosstime = 06:00
+genPeriod = 168:00
+startDate = 2023-08-29
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 1F
+bosstime = 12:00
+genPeriod = 168:00
+startDate = 2023-08-29
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 1F
+bosstime = 18:00
+genPeriod = 168:00
+startDate = 2023-08-29
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 1F
+bosstime = 00:00
+genPeriod = 168:00
+startDate = 2023-08-30
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 1F
+bosstime = 06:00
+genPeriod = 168:00
+startDate = 2023-08-30
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 1F
+bosstime = 12:00
+genPeriod = 168:00
+startDate = 2023-08-30
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 1F
+bosstime = 18:00
+genPeriod = 168:00
+startDate = 2023-08-30
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 1F
+bosstime = 00:00
+genPeriod = 168:00
+startDate = 2023-08-31
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 1F
+bosstime = 06:00
+genPeriod = 168:00
+startDate = 2023-08-31
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 1F
+bosstime = 12:00
+genPeriod = 168:00
+startDate = 2023-08-31
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 1F
+bosstime = 18:00
+genPeriod = 168:00
+startDate = 2023-08-31
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 1F
+bosstime = 00:00
+genPeriod = 168:00
+startDate = 2023-09-01
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 1F
+bosstime = 06:00
+genPeriod = 168:00
+startDate = 2023-09-01
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 1F
+bosstime = 12:00
+genPeriod = 168:00
+startDate = 2023-09-01
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 1F
+bosstime = 18:00
+genPeriod = 168:00
+startDate = 2023-09-01
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 2F
 bosstime = 07:00
-genPeriod = 24:00
+genPeriod = 168:00
 startDate = 2023-07-31
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 2F
 bosstime = 14:00
-genPeriod = 24:00
+genPeriod = 168:00
 startDate = 2023-07-31
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 2F
 bosstime = 21:00
-genPeriod = 24:00
+genPeriod = 168:00
+startDate = 2023-07-31
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 2F
+bosstime = 07:00
+genPeriod = 168:00
+startDate = 2023-08-01
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 2F
+bosstime = 14:00
+genPeriod = 168:00
+startDate = 2023-08-01
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 2F
+bosstime = 21:00
+genPeriod = 168:00
+startDate = 2023-08-01
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 2F
+bosstime = 07:00
+genPeriod = 168:00
+startDate = 2023-08-02
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 2F
+bosstime = 14:00
+genPeriod = 168:00
+startDate = 2023-08-02
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 2F
+bosstime = 21:00
+genPeriod = 168:00
+startDate = 2023-08-02
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 2F
+bosstime = 07:00
+genPeriod = 168:00
+startDate = 2023-08-03
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 2F
+bosstime = 14:00
+genPeriod = 168:00
+startDate = 2023-08-03
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 2F
+bosstime = 21:00
+genPeriod = 168:00
+startDate = 2023-08-03
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 2F
+bosstime = 07:00
+genPeriod = 168:00
+startDate = 2023-08-04
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 2F
+bosstime = 14:00
+genPeriod = 168:00
+startDate = 2023-08-04
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 2F
+bosstime = 21:00
+genPeriod = 168:00
+startDate = 2023-08-04
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 3F
+bosstime = 20:15
+genPeriod = 168:00
 startDate = 2023-07-31
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 3F
 bosstime = 20:15
-genPeriod = 24:00
+genPeriod = 168:00
+startDate = 2023-08-01
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 3F
+bosstime = 20:15
+genPeriod = 168:00
+startDate = 2023-08-02
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 3F
+bosstime = 20:15
+genPeriod = 168:00
+startDate = 2023-08-03
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 3F
+bosstime = 20:15
+genPeriod = 168:00
+startDate = 2023-08-04
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 4F
+bosstime = 21:15
+genPeriod = 168:00
 startDate = 2023-07-31
 before_alert_ment = !
 alert_ment =  time. Come on!
 
 bossname = GC 4F
 bosstime = 21:15
-genPeriod = 24:00
-startDate = 2023-07-31
+genPeriod = 168:00
+startDate = 2023-08-01
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 4F
+bosstime = 21:15
+genPeriod = 168:00
+startDate = 2023-08-02
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 4F
+bosstime = 21:15
+genPeriod = 168:00
+startDate = 2023-08-03
+before_alert_ment = !
+alert_ment =  time. Come on!
+
+bossname = GC 4F
+bosstime = 21:15
+genPeriod = 168:00
+startDate = 2023-08-04
 before_alert_ment = !
 alert_ment =  time. Come on!
 
@@ -201,7 +474,3 @@ genPeriod = 24:00
 startDate = 2023-07-28
 before_alert_ment = !
 alert_ment =  time. Come on
-
-
-
-
